# -C-New-

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: build-check.yml
assets/: README.md
assets/sprites/: README.md
assets/tiles/: README.md
assets/vfx/: README.md
src/: abilities.cpp  abilities.h  animation.cpp  animation.h  audio.cpp  audio.h  bosses.h  characters.h  combat.cpp  combat.h  director.cpp  director.h  effects.cpp  effects.h  enemy.cpp  enemy.h  hazards.cpp  hazards.h  hud.cpp  hud.h  loot.cpp  loot.h  main.cpp  maps.h  pathfinding.cpp  pathfinding.h  pickups.cpp  pickups.h  player.cpp  player.h  projectile.cpp  projectile.h  ranged.cpp  ranged.h  savegame.cpp  savegame.h  spawner.cpp  spawner.h  telegraph.cpp  telegraph.h  (+9 more)
